--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "background_color": "#0e0e0e",
   "theme_color": "#908282",
-  "prefer_related_applications": true,
+  "prefer_related_applications": false,
   "orientation": "portrait-primary",
   "icons": [
     {
